2024-04-17T08:21:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8718643753 # 190
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 16 25
* notice: prev accum: outdated-unq outdated-all / unq all: 1883 4035 / 1902 4059
* notice: next accum: outdated-unq outdated-all / unq all: 1883 4035 / 1903 4060
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-17]

2024-04-16T16:22:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8709113073 # 188
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 16 24
* notice: prev accum: outdated-unq outdated-all / unq all: 1883 4035 / 1902 4058
* notice: next accum: outdated-unq outdated-all / unq all: 1883 4035 / 1902 4059
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-16]

2024-04-16T08:21:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8702324737 # 187
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 16 23
* notice: prev accum: outdated-unq outdated-all / unq all: 1883 4035 / 1901 4057
* notice: next accum: outdated-unq outdated-all / unq all: 1883 4035 / 1902 4058
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-16]

2024-04-15T16:22:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8692597389 # 185