@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-17T08:21:44Z",
+  "timestamp" : "2024-04-18T01:15:52Z",
   "count_outdated" : 4035,
   "uniques_outdated" : 1883,
-  "count" : 4060,
-  "uniques" : 1903,
+  "count" : 4062,
+  "uniques" : 1905,
   "clones" : [
     {
       "timestamp": "2024-04-04T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
