@@ -1,6 +1,6 @@
 {
-  "count": 25,
-  "uniques": 16,
+  "count": 27,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2024-04-04T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
